# databricks-zh-expert

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_model_gateway_attempts.py  0003_prompt_artifacts.py  0004_knowledge_rag.py  0005_knowledge_catalog_presence.py  0006_catalog_link_sources.py  0007_expert_templates.py  0008_workspace_code_generation.py  0009_remove_project_classification_fields.py
knowledge/databricks/: sources.yml
knowledge/expert_templates/: profiles.yml
src/databricks_zh_expert/: main.py
tests/: conftest.py
tests/evals/: databricks_rag.yml  end_to_end.yml  expert_templates.yml  workspace_context.yml
tests/integration/: test_database.py  test_end_to_end_evaluation.py  test_expert_template_messages_api.py  test_expert_template_repository.py  test_expert_template_retrieval.py  test_expert_templates_api.py  test_health_ready.py  test_knowledge_api.py  test_knowledge_messages_api.py  test_knowledge_repository.py  test_messages_api.py  test_migrations.py  test_models_api.py  test_prompts_api.py  test_sessions_api.py  test_workspace_code_generation_messages_api.py  test_workspaces_api.py
tests/unit/: test_chat_context.py  test_chat_service.py  test_config.py  test_embeddings.py  test_errors.py  test_evaluation_cli.py  test_evaluation_dataset.py  test_evaluation_report.py  test_evaluation_rules.py  test_evaluation_runner.py  test_expert_template_cli.py  test_expert_template_content.py  test_expert_template_context.py  test_expert_template_eval.py  test_expert_template_registry.py  test_expert_template_retrieval.py  test_expert_template_sync.py  test_health.py  test_knowledge_chunker.py  test_models.py  (+22 more)
(+192 files in other folders)
