[project]
name = "databricks-zh-expert"
version = "0.1.0"
description = "Databricks 顾问型 Agent Demo"
readme = "README.md"
requires-python = "==3.12.10"
dependencies = [
    "alembic==1.18.5",
    "beautifulsoup4==4.15.0",
    "fastapi==0.139.0",
    "httpx==0.28.1",
    "jinja2==3.1.6",
    "litellm==1.91.1",
    "markdown-it-py==4.2.0",
    "markdownify==1.2.3",
    "openai==2.45.0",
    "pgvector==0.5.0",
    "psycopg[binary]==3.3.4",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "python-dotenv==1.2.2",
    "pyyaml==6.0.3",
    "sqlalchemy[asyncio]==2.0.51",
    "tiktoken==0.13.0",
    "uvicorn[standard]==0.51.0",
]

[project.scripts]
databricks-zh-expert = "databricks_zh_expert.main:run"

[dependency-groups]
dev = [
    "pyright==1.1.411",
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "ruff==0.15.21",
]

[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/databricks_zh_expert"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
markers = ["integration: 需要本地测试数据库的集成测试"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["databricks_zh_expert"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.pyright]
include = ["src", "tests"]
exclude = [".venv"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
